sfdc-ac-transition-pkg/force-app/main/default/objects/SFDC_Recommendation__mdt/SFDC_Recommendation__mdt.object-meta.xml
<CustomObject>
    <description>Industry upgrade recommendations and text mapping</description>
    <label>SFDC Recommendation</label>
    <pluralLabel>SFDC Recommendations</pluralLabel>
</CustomObject>