sfdc-ac-transition-pkg/force-app/main/default/objects/SFDC_Recommendation__mdt/fields/Recommendation_Apex__c.field-meta.xml
<CustomField>
    <fullName>Recommendation_Apex__c</fullName>
    <inlineHelpText>Apex class that extends UpgradeRecommendation and overrides the &quot;generate&quot; method to provide a recommendation</inlineHelpText>
    <label>Recommendation Apex</label>
    <length>100</length>
    <type>Text</type>
</CustomField>