sfdc-ac-transition-pkg/force-app/main/default/objects/SFDC_Recommendation__mdt/fields/Recommendation_Description_Label__c.field-meta.xml
<CustomField>
    <fullName>Recommendation_Description_Label__c</fullName>
    <label>Recommendation Description Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>