sfdc-ac-transition-pkg/force-app/main/default/objects/SFDC_Recommendation__mdt/validationRules/Title_Required_With_Description.validationRule-meta.xml
<ValidationRule>
    <fullName>Title_Required_With_Description</fullName>
    <active>true</active>
    <description>Recommendation Description Label and Recommendation Description Title Label must both be populated if one is set.</description>
    <errorConditionFormula>(NOT(ISBLANK(Recommendation_Description_Label__c)) &amp;&amp; ISBLANK(Recommendation_Description_Title_Label__c)) ||
(ISBLANK(Recommendation_Description_Label__c) &amp;&amp; NOT(ISBLANK(Recommendation_Description_Title_Label__c)))</errorConditionFormula>
    <errorMessage>Recommendation Description Label and Recommendation Description Title Label must both be populated if one is set.</errorMessage>
</ValidationRule>