sfdc-ac-transition-pkg/force-app/main/default/objects/SFDC_Recommendation__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Custom_Label__c</columns>
    <columns>Recommendation_Apex__c</columns>
    <columns>Recommendation_Description_Label__c</columns>
    <columns>Recommendation_Description_Title_Label__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>